seh-frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seh-frontend
  namespace: sportsify-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: seh-frontend
  template:
    metadata:
      labels:
        app: seh-frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/linuxserver/webtop:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
