seh-frontend-clusteripsvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: seh-frontend-clusteripsvc
  namespace: sportsify-ns
spec:
  type: ClusterIP
  selector:
    type: seh-frontend
  ports:
    - name: http
      port: 8082
      targetPort: 8082
