grafanaserviceRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: sportsify-gateway
      namespace: sportsify-ns
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana
      backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
          kind: Service
