jenkinsserviceRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins-route
  namespace: sportsify-ns            # HTTPRoute lives in Jenkins namespace
spec:
  parentRefs:
  - name: sportsify-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /jenkins
    backendRefs:
    - name: jenkins
      namespace: jenkins         # points to Jenkins service namespace
      port: 8080
      kind: Service
