postserviceRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: post-route
  namespace: sportsify-ns
spec:
  parentRefs:
  - name: sportsify-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /posts
    backendRefs:
    - name: post-service
      port: 8081
      kind: Service
