prometheusserviceRoute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
  namespace: monitoring
spec:
  parentRefs:
    - name: sportsify-gateway
      namespace: sportsify-ns
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /prometheus
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          namespace: monitoring
          port: 9090
          kind: Service
